--- a/Zend/ChangeLog
+++ b/Zend/ChangeLog
@@ -1,3 +1,13 @@
+2003-08-16  Marcus Boerger  <marcus.boerger@post.rwth-aachen.de>
+
+    * zend_API.c
+      zend_API.h
+      zend_reflection_api.c:
+      Simplify abstract method declaration
+
+    * zend_object_handlers.h:
+      WS
+
 2003-08-15  Sascha Schumann  <sascha@schumann.cx>
 
     * zend_execute.c
