--- a/Zend/ChangeLog
+++ b/Zend/ChangeLog
@@ -1,3 +1,13 @@
+2003-08-20  Zeev Suraski  <zeev@zend.com>
+
+    * zend_alloc.c:
+      adhere to silence
+
+2003-08-20  Marcus Boerger  <marcus.boerger@post.rwth-aachen.de>
+
+    * zend_alloc.c:
+      Fix counting number of leaks
+
 2003-08-19  Wez Furlong  <wez.php@thebrainroom.net>
 
     * zend_execute.c:
